--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -1,37 +1,49 @@
 
 
 
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <style>
+        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    </style>
 
-<div class="example-wrapper">
+    <div class="example-wrapper">
+        {{form(f)}}
+        <table>
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>NbBooks</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            {% for a in authors %}
+                <tr>
+                    <td>{{a.id}}</td>
+                    <td>{{a.username}}</td>
+                    <td>{{a.email}}</td>
+                    <td>{{a.NbBooks}}</td>
+                    <td><a href={{path('app_author_delete',{id:a.id})}}>delete</a></td>
+                    <td><a href={{path('app_author_update',{id:a.id})}}>Update</a></td>
+                    <td><a href={{path('app_author_details',{id:a.id})}}>Books List</a></td>
 
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-{% for a in authors %}
-<tr>
-<td>{{a.id}}</td>
-<td>{{a.username}}</td>
-<td>{{a.email}}</td>
+                </tr>
+            {% endfor %}
+        </table>
 
-<td><a href={{path('app_author_delete',{id:a.id})}}>delete</a></td>
-<td><a href={{path('app_author_update',{id:a.id})}}>Update</a></td>
+        <h1>Ordred List</h1>
+        <table>
+            {% for a in authorsOrdred %}
+                <tr>
+                    <td>{{a.id}}</td>
+                    <td>{{a.username}}</td>
+                    <td>{{a.email}}</td>
+                    <td>{{a.NbBooks}}</td>
+                    <td><a href={{path('app_author_delete',{id:a.id})}}>delete</a></td>
+                    <td><a href={{path('app_author_update',{id:a.id})}}>Update</a></td>
 
-
-</tr>
-{% endfor %}
-    </tbody>
-</table>
-
-
-</div>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
