compte rendu atelier 4

--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -7,43 +7,31 @@
     </style>
 
     <div class="example-wrapper">
-        {{form(f)}}
+
         <table>
             <thead>
             <tr>
                 <th>ID</th>
                 <th>Name</th>
                 <th>Email</th>
-                <th>NbBooks</th>
+
                 <th>Actions</th>
             </tr>
             </thead>
-            {% for a in authors %}
+            {% for a in list %}
                 <tr>
                     <td>{{a.id}}</td>
                     <td>{{a.username}}</td>
                     <td>{{a.email}}</td>
-                    <td>{{a.NbBooks}}</td>
+
                     <td><a href={{path('app_author_delete',{id:a.id})}}>delete</a></td>
                     <td><a href={{path('app_author_update',{id:a.id})}}>Update</a></td>
-                    <td><a href={{path('app_author_details',{id:a.id})}}>Books List</a></td>
+
 
                 </tr>
             {% endfor %}
         </table>
 
-        <h1>Ordred List</h1>
-        <table>
-            {% for a in authorsOrdred %}
-                <tr>
-                    <td>{{a.id}}</td>
-                    <td>{{a.username}}</td>
-                    <td>{{a.email}}</td>
-                    <td>{{a.NbBooks}}</td>
-                    <td><a href={{path('app_author_delete',{id:a.id})}}>delete</a></td>
-                    <td><a href={{path('app_author_update',{id:a.id})}}>Update</a></td>
 
-                </tr>
-            {% endfor %}
-        </table>
+
     </div>
